增加api:DirectlyToWhoRejectedMe
